# Hermes

./: .gitignore  README.md  pyproject.toml  setup.sh
docs/: parity-oracle.md  runbook.md  sandbox-twin.md
hermes/: agent.py  capture.py  cli.py  config.py  confirm.py  llm.py  models.py  oracle.py  package.py  paths.py  project.py  ssh.py  ui.py
hermes/gpu/: __init__.py  provision.py  ssh.py  vast.py
hermes/prompts/: antithesis.md  build_mode.md  build_proof.md  planner.md  recon_build.md  recon_build_repo.md  referee.md  system.md  verifier.md
hermes/sandbox/: __init__.py  local.py  provision.py
hermes/toolbox/: download_file.py  extract_code.py  replicate.py  transfer.py
hermes/tools/: __init__.py  _common.py  base.py  builder.py  hosts.py  local_fs.py  local_shell.py  oracle.py  readonly.py  recon.py  remote.py  twin.py  web.py
tests/: conftest.py  test_agent_loop.py  test_antithesis.py  test_base64_codec.py  test_build_lifecycle.py  test_build_recipe.py  test_builder_tools.py  test_capture.py  test_common.py  test_extract_code.py  test_hosts.py  test_llm_backend.py  test_model_profiles.py  test_oracle.py  test_oracle_tools.py  test_package.py  test_paths.py  test_planner_referee.py  test_provision.py  test_readonly.py  test_recon.py  test_recon_tools.py  test_registry.py  test_remote.py  test_replicate.py  test_repo_mode.py  test_sandbox.py  test_scan.py  test_survey.py  test_transfer.py  test_twin_clone.py  test_twin_deploy.py  test_twin_diff.py  test_twin_model.py  test_twin_reground.py  test_twin_server.py  test_twin_tools.py  test_vast.py
(+8 files in other folders)
